cmake_minimum_required(VERSION 3.7)
project(HWLOC_PKG_CONFIG LANGUAGES NONE)

find_package(PkgConfig)
pkg_search_module(HWLOC hwloc IMPORTED_TARGET)
message(STATUS "HWLOC_LIBRARIES ${HWLOC_LIBRARIES}")
message(STATUS "HWLOC_LDFLAGS ${HWLOC_LDFLAGS}")
message(STATUS "HWLOC_LIBRARY_DIRS ${HWLOC_LIBRARY_DIRS}")
message(STATUS "HWLOC_LINK_LIBRARIES ${HWLOC_LINK_LIBRARIES}")

get_target_property(target_INTERFACE_LINK_LIBRARIES PkgConfig::HWLOC INTERFACE_LINK_LIBRARIES)
message(STATUS "TARGET INTERFACE_LINK_LIBRARIES ${target_INTERFACE_LINK_LIBRARIES}")
